[package]
name = "yaap"
version = "0.0.2"
authors = ["Brendan Arciszewski <git@brendanarciszewski.ca>"]
edition = "2018"
license = "Apache-2.0"
description = "A custom allocator facility playground"
repository = "http://git.brendanarciszewski.ca/yaap"
documentation = "https://docs.rs/yaap"

[dependencies]

[dev-dependencies]
typenum = "1.12"
generic-array = "0.14"
